--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,6 +74,30 @@ button:focus-visible {
   width: 100%;
   height: 100%;
   z-index: -1;
+  object-fit: cover;
+}
+
+.panel {
+  position: absolute;
+  left: 25%;
+  top: 0;
+  width: 25%;
+  background-image: url("./assets/panel.png");
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+  padding-top: 150px;
+}
+
+.panel h1 {
+  font-size: 50px;
+  text-align: left;
+  margin: 0;
+}
+
+.panel p {
+  text-align: left;
 }
 
 .console {
