--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,8 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
+  overflow: scroll;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -107,118 +109,9 @@ button:focus-visible {
 
 .galaxyButton{
   background-color: blue;
-  /* background: transparent; */
-}
- 
-.WDCCxSESA{
   border-radius: 50%;
   width: 90px;
   height: 90px;
-  left: 830px;
-  bottom: 44%;
-  display: inline-flex; /* Aligns items inside the button */
-  align-items: center; /* Centers content vertically */
-  justify-content: center;
-  cursor: pointer;
-  background-color: aquamarine;
-  position: absolute;
-}
-
-.Andromeda{
-  border-radius: 50%;
-  width: 90px;
-  height: 90px;
-  left: 620px;
-  bottom: 77%;
-  display: inline-flex; /* Aligns items inside the button */
-  align-items: center; /* Centers content vertically */
-  justify-content: center;
-  cursor: pointer;
-  background-color: aquamarine;
-  position: absolute;
-}
-
-.Draco{
-  border-radius: 50%;
-  width: 90px;
-  height: 90px;
-  left: 370px;
-  bottom: 77%;
-  display: inline-flex; /* Aligns items inside the button */
-  align-items: center; /* Centers content vertically */
-  justify-content: center;
-  cursor: pointer;
-  background-color: aquamarine;
-  position: absolute;
-}
-
-.Phoenix{
-  border-radius: 50%;
-  width: 90px;
-  height: 90px;
-  left: 380px;
-  bottom: 40%;
-  display: inline-flex; /* Aligns items inside the button */
-  align-items: center; /* Centers content vertically */
-  justify-content: center;
-  cursor: pointer;
-  background-color: aquamarine;
-  position: absolute;
-}
-
-.galaxyButton{
-  background-color: blue;
-  /* background: transparent; */
-}
- 
-.WDCCxSESA{
-  border-radius: 50%;
-  width: 90px;
-  height: 90px;
-  left: 830px;
-  bottom: 370px;
-  display: inline-flex; /* Aligns items inside the button */
-  align-items: center; /* Centers content vertically */
-  justify-content: center;
-  cursor: pointer;
-  background-color: aquamarine;
-  position: absolute;
-}
-
-.Andromeda{
-  border-radius: 50%;
-  width: 90px;
-  height: 90px;
-  left: 620px;
-  bottom: 640px;
-  display: inline-flex; /* Aligns items inside the button */
-  align-items: center; /* Centers content vertically */
-  justify-content: center;
-  cursor: pointer;
-  background-color: aquamarine;
-  position: absolute;
-}
-
-.Draco{
-  border-radius: 50%;
-  width: 90px;
-  height: 90px;
-  left: 380px;
-  bottom: 640px;
-  display: inline-flex; /* Aligns items inside the button */
-  align-items: center; /* Centers content vertically */
-  justify-content: center;
-  cursor: pointer;
-  background-color: aquamarine;
-  position: absolute;
-}
-
-.Phoenix{
-  border-radius: 50%;
-  width: 90px;
-  height: 90px;
-  left: 380px;
-  bottom: 340px;
   display: inline-flex; /* Aligns items inside the button */
   align-items: center; /* Centers content vertically */
   justify-content: center;
@@ -230,4 +123,10 @@ button:focus-visible {
 .hoverText{
   color: black;
   
+}
+
+.canvas {
+  width: 1800px;
+  height: 1080px;
+  position:relative
 }
