--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -130,3 +130,30 @@ button:focus-visible {
   height: 1080px;
   position:relative
 }
+
+.leftside {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding:  20px 0 0 20px;
+}
+
+.rightside {
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px 20px 0 0;
+}
+
+.sidebox {
+  border: green 2px solid;
+  background-color: rgb(26, 26, 26);
+}
