--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,6 +79,17 @@ button:focus-visible {
   object-fit: cover;
 }
 
+.foreground {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  object-fit: cover;
+  pointer-events: none;
+}
+
 .panel {
   position: absolute;
   left: 25%;
@@ -164,5 +175,5 @@ button:focus-visible {
 
 .sidebox {
   border: green 2px solid;
-  background-color: rgb(26, 26, 26);
+  background-color: rgb(0, 0, 0);
 }
