--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -175,5 +175,20 @@ button:focus-visible {
 
 .sidebox {
   border: green 2px solid;
+  border-radius: 10px;
   background-color: rgb(0, 0, 0);
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  height: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  border: 2px solid green;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
