add crappy warning icons

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -128,6 +128,9 @@ button:focus-visible {
   justify-content: center;
   cursor: pointer;
   background-color: aquamarine;
+}
+
+div:has( > .galaxyButton) {
   position: absolute;
 }
 
@@ -191,4 +194,18 @@ button:focus-visible {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.warningIcon {
+  position: absolute;
+  left: 20px;
+  top: -20px;
+}
+
+.warningIcon > span {
+  position: absolute;
+  left: 50%;
+  top:50%;
+  margin-top: -10px;
+  font-size: 20px;
 }
