--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
-  overflow: scroll;
+  overflow: hidden;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -183,23 +183,26 @@ div:has( > .galaxyButton) {
 }
 
 .popup {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 50%;
-  height: 50%;
-  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 20px;
+  left: 25%;
   background-color: black;
   border: 2px solid green;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .warningIcon {
   position: absolute;
   left: 20px;
   top: -20px;
+  width: 70px;
+  height: 70px;
+}
+
+.warningIcon > img {
+  width: 100%;
+  height: 100%
 }
 
 .warningIcon > span {
@@ -208,4 +211,10 @@ div:has( > .galaxyButton) {
   top:50%;
   margin-top: -10px;
   font-size: 20px;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  overflow:scroll;
 }
