--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -180,6 +180,7 @@ div:has( > .galaxyButton) {
   border: green 2px solid;
   border-radius: 10px;
   background-color: rgb(0, 0, 0);
+  color: white;
 }
 
 .popup {
@@ -217,4 +218,22 @@ div:has( > .galaxyButton) {
   width: 100vw;
   height: 100vh;
   overflow:scroll;
+}
+
+.particles {
+  background-color: #101010;
+}
+
+.particles > div {
+  height: 2px;
+  width: 2px;
+  background-color: white;
+  position: absolute;
+  opacity: 0.8;
+  animation: flicker 5s infinite ease-in-out;
+}
+
+@keyframes flicker {
+  0%, 100% { opacity: 0.8; }
+  50% { opacity: 0.3; }
 }
