--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -116,6 +116,56 @@ button:focus-visible {
 .console {
   position: fixed;
   bottom: 50px;
+  width: 97%;
+  left: 10px;
+  border-radius: 8px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  
+}
+
+.inputWrapper{
+  border: 2px solid grey;
+  width: 100%;
+  border-radius: 4px;
+  flex: 1;
+  margin-right: 10px;
+  padding: 10px;
+  border-radius: 8px;  
+  text-align: left;
+  background-color: #0000;
+  color: white;
+  height: 30px;
+ 
+
+}
+
+.inputWrapper > input{
+  width: 98%;
+  flex: 1;
+  background-color: #0000;
+  border: none;
+  color: white;
+  font-size: 18px;
+}
+
+input:focus, textarea:focus, select:focus, button:focus{
+  outline: none;
+  border: none;
+  box-shadow: none;
+}
+
+.console > button{
+  padding: 10px 20px;
+  border: 2px solid grey;
+  border-radius: 8px;
+  background-color: #0000;
+  color: white;
+  cursor: pointer;
+  font-size: 1em;
+  transition: background-color 0.25s;
+  height: 53px;
 }
 
 .galaxyButton{
@@ -164,6 +214,7 @@ div:has( > .galaxyButton) {
   flex-direction: column;
   gap: 20px;
   padding:  20px 0 0 20px;
+  color: white;
 }
 
 .rightside {
